--- a/styles.css
+++ b/styles.css
@@ -217,3 +217,65 @@ header a:hover, footer a:hover {
         max-width: 1140px;
     }
 }
+/* Espaciado y distribución */
+table {
+  table-layout: fixed;
+  width: 100%;
+}
+thead th:nth-child(1) {
+  width: 33%;
+}
+thead th:nth-child(2) {
+  width: 33%;
+}
+thead th:nth-child(3) {
+  width: 34%;
+}
+th, td {
+  padding: 20px;
+}
+
+/* Bordes */
+table, tr, th, td {
+  border-collapse: collapse;
+  border: 3px solid cyan;
+}
+
+/* Tipografía */
+thead th, tfoot th, caption {
+  font-family: Arial, Helvetica, sans-serif;
+}
+th {
+  letter-spacing: 2px;
+}
+td {
+  letter-spacing: 1px;
+}
+tbody td {
+  text-align: left;
+}
+
+/* Fondo */
+table {
+  background-color: #33ccff;
+}
+thead {
+  color: white;
+  text-shadow: 1px 1px 1px black;
+}
+thead th {
+  background: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(0,0,0,0.5));
+}
+
+/* Estilo cebra */
+tbody tr:nth-child(odd) {
+  background-color: #33ccff;
+}
+tbody tr:nth-child(even) {
+  background-color: #c7f2ff;
+}
+
+/* Hover */
+tbody tr:hover {
+  background-color: white;
+}
