--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #f9f9f9;
     border: 1px solid #ccc; 
     padding: 15px; 
+    font-style: italic;
 }
 /* Estilos de anuncio */
 .anuncio {
