--- a/styles.css
+++ b/styles.css
@@ -229,22 +229,14 @@ table {
 /* Bordes y relleno para las celdas */
 th, td {
   padding: 12px;
-  border: 1px solid #ccc;
+  border: 1px solid #000000;
   text-align: left;
 }
 
 /* Fondo de la cabecera */
 thead {
-  background-color: #4CAF50;
+  background-color: #03e8fc;
   color: white;
 }
 
-/* Estilo cebra para las filas */
-tbody tr:nth-child(odd) {
-  background-color: #f2f2f2;
-}
 
-/* Hover sobre las filas */
-tbody tr:hover {
-  background-color: #ddd;
-}
