--- a/styles.css
+++ b/styles.css
@@ -218,8 +218,7 @@ header a:hover, footer a:hover {
         max-width: 1140px;
     }
 }
-/* Estilos básicos para la tabla */
-/* Estilos básicos para la tabla */
+/* Estilos tabla */
 table {
   width: 100%;
   border-collapse: collapse;
