--- a/styles.css
+++ b/styles.css
@@ -231,6 +231,7 @@ th, td {
   padding: 12px;
   border: 1px solid #ccc;
   text-align: left;
+    background-color:#42cef5
 }
 
 /* Fondo de la cabecera */
