--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,7 @@ header a:hover, footer a:hover {
 }
 
 .indice-alfabetico a {
-    color: #333; 
+    color: #007bff; 
     text-decoration: none;
 }
 
