--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ header a:hover, footer a:hover {
 }
 
 .skip-link:hover {
-    background-color: #003366;
+    background-color: #007bff;
     color: white;
 }
 
