--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ form {
     padding: 20px;
     background-color: #f4f4f4; /* Fondo del formulario */
     border-radius: 10px; /* Bordes redondeados */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Añade una sombra para destacar el formulario */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /*Sombra para destacar el formulario */
     width: 75%; /* Ancho del formulario */
     max-width: 600px; /* Máximo ancho */
     margin: 0 auto; /* Centra el formulario en la página */
