--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,23 @@
+:root {
+    --primary-color: #007bff;
+    --secondary-color: #333;
+    --background-color: #f4f4f4;
+    --header-footer-bg-color: #004080;
+    --header-footer-text-color: #ffcc00;
+}
+
 /* Color del texto y propiedades de la fuente */
 body {
     font-family: Arial, sans-serif;
-    color: #333;
-    background-color: #f4f4f4;
+    color: var(--secondary-color);
+    background-color: var(--background-color);
     margin: 0;
     padding: 0;
 }
 
 /* Propiedades para enlaces */
 a {
-    color: #007bff;
+    color: var(--primary-color);
     text-decoration: none;
 }
 
@@ -24,19 +32,29 @@ main {
     max-width: 1200px;
 }
 
+/* Clase container */
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto; /* Centra el contenedor */
+    padding: 0 15px; /* Añade un pequeño margen lateral */
+    box-sizing: border-box;
+}
+
 /* Estilos para encabezados */
 h1, h2, h3, h4, h5, h6 {
-    color: #333;
+    color: var(--secondary-color);
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 /* Estilos para bordes */
 .conBorde {
     background-color: #f9f9f9;
-    border: 1px solid #ccc; 
-    padding: 15px; 
+    border: 1px solid #ccc;
+    padding: 15px;
     font-style: italic;
 }
+
 /* Estilos de anuncio */
 .anuncio {
     background-color: #f9f9f9;
@@ -51,14 +69,14 @@ form {
     flex-direction: column;
     gap: 15px;
     padding: 20px;
-    background-color: #f4f4f4; /* Fondo del formulario */
-    border-radius: 10px; /* Bordes redondeados */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /*Sombra para destacar el formulario */
-    width: 75%; /* Ancho del formulario */
-    max-width: 600px; /* Máximo ancho */
-    margin: 0 auto; /* Centra el formulario en la página */
-    font-family: 'Arial', sans-serif; /* Fuente para todo el formulario */
-    font-size: 16px; /* Tamaño de fuente */
+    background-color: var(--background-color);
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 75%;
+    max-width: 600px;
+    margin: 0 auto;
+    font-family: 'Arial', sans-serif;
+    font-size: 16px;
     box-sizing: border-box;
 }
 
@@ -77,14 +95,14 @@ select {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    width: 100%; /* Ocupa todo el ancho del formulario */
-    font-size: 16px; /* Aumenta el tamaño de la fuente */
+    width: 100%;
+    font-size: 16px;
     box-sizing: border-box;
 }
 
 /* Estilos específicos para los textarea */
 textarea {
-    resize: vertical; /* Permite redimensionar verticalmente */
+    resize: vertical;
 }
 
 /* Estilos para las opciones de selección (select) */
@@ -109,7 +127,7 @@ input[type="checkbox"] {
 /* Estilos para el botón de envío */
 input[type="submit"] {
     padding: 12px 20px;
-    background-color: #007bff;
+    background-color: var(--primary-color);
     color: white;
     border: none;
     border-radius: 5px;
@@ -129,24 +147,25 @@ nav[aria-label="breadcrumbs"] p {
 }
 
 nav[aria-label="breadcrumbs"] a {
-    color: #007bff;
+    color: var(--primary-color);
     text-decoration: none;
 }
 
 nav[aria-label="breadcrumbs"] a:hover {
     text-decoration: underline;
 }
+
 /* Estilos para el header y footer */
 header, footer {
-    background-color: #004080; 
-    color: white; 
+    background-color: var(--header-footer-bg-color);
+    color: white;
     padding: 20px;
     text-align: center;
 }
 
 /* Estilos adicionales para elementos dentro del header y footer */
 header h1, header a, footer a, header h2 {
-    color: #ffcc00; 
+    color: var(--header-footer-text-color);
     text-decoration: none;
 }
 
@@ -158,21 +177,20 @@ header a:hover, footer a:hover {
 .skip-link {
     color: white;
     background-color: #003366;
-    padding: 10px 15px; /* Añadir algo de relleno */
-    border: 1px solid #ccc; /* Añadir un borde para destacarlo */
-    border-radius: 5px; /* Esquinas redondeadas */
+    padding: 10px 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
     text-decoration: none;
     display: inline-block;
-    margin-top: 10px; /* Espacio entre el párrafo y el enlace */
+    margin-top: 10px;
 }
 
 .skip-link:hover {
-    background-color: #007bff;
+    background-color: var(--primary-color);
     color: white;
 }
 
 /* Estilo del indice alfabético de la página principal */
-
 .indice-alfabetico {
     display: flex;
     justify-content: space-around;
@@ -187,68 +205,70 @@ header a:hover, footer a:hover {
 }
 
 .indice-alfabetico a {
-    color: #007bff; 
+    color: var(--primary-color);
     text-decoration: none;
 }
 
 .indice-alfabetico a:hover {
-    color: #007bff;
-    text-decoration: underline; /* Manteniendo el estilo hover */
+    color: var(--primary-color);
+    text-decoration: underline;
 }
+
 /* Espaciado y distribución */
 table {
-    table-layout: auto; /* El contenido determina el ancho */
-    width: 80%; /* Reduce el ancho total de la tabla */
-    margin: 20px 0; /* Quita el centrado y la pega a la izquierda */
-  }
-  
-  /* Ancho de las columnas */
-  thead th:nth-child(1) {
-    width: 35%; /* Ajusta el ancho de la primera columna */
-  }
-  thead th:nth-child(2) {
-    width: 35%; /* Ajusta el ancho de la segunda columna */
-  }
-  thead th:nth-child(3) {
-    width: 30%; /* Ajusta el ancho de la tercera columna */
-  }
-  th, td {
-    padding: 10px; /* Reduce el padding para ahorrar espacio */
-  }
-  
-  /* Bordes */
-  table, tr, th, td {
+    table-layout: auto;
+    width: 80%;
+    margin: 20px 0;
+}
+
+/* Ancho de las columnas */
+thead th:nth-child(1) {
+    width: 35%;
+}
+thead th:nth-child(2) {
+    width: 35%;
+}
+thead th:nth-child(3) {
+    width: 30%;
+}
+th, td {
+    padding: 10px;
+}
+
+/* Bordes */
+table, tr, th, td {
     border-collapse: collapse;
-    border: 2px solid cyan; /* Borde delgado */
-  }
-  
-  /* Tipografía */
-  thead th, tfoot th, caption {
+    border: 2px solid cyan;
+}
+
+/* Tipografía */
+thead th, tfoot th, caption {
     font-family: Verdana, Arial, sans-serif;
     font-weight: bold;
     color: black;
-  }
-  th, td {
+}
+th, td {
     letter-spacing: 1px;
     text-align: center;
     font-family: Verdana, Arial, sans-serif;
     font-weight: bold;
     color: black;
-  }
-  
-  /* Fondo - Encabezado más oscuro */
-  thead {
-    background-color: #005f73; /* Azul oscuro para el encabezado */
+}
+
+/* Fondo - Encabezado más oscuro */
+thead {
+    background-color: #005f73;
     color: white;
-  }
-  tfoot, tbody {
-    background-color: #33ccff; /* Fondo uniforme */
-  }
-  
-  /* Hover */
-  tbody tr:hover {
+}
+tfoot, tbody {
+    background-color: #33ccff;
+}
+
+/* Hover */
+tbody tr:hover {
     background-color: white;
-  }
+}
+
 /* Responsive Design */
 @media screen and (max-width: 480px) {
     body {
