--- a/styles/styles.css
+++ b/styles/styles.css
@@ -280,7 +280,7 @@ tbody tr:hover {
     background-color: white;
 }
 
-/* Responsive Design */
+
 @media screen and (max-width: 480px) {
     body {
         font-size: 14px;
@@ -288,6 +288,13 @@ tbody tr:hover {
 
     main {
         padding: 10px;
+    }
+
+
+    iframe {
+        width: 100%;
+        height: 300px;
+        border: none;
     }
 }
 
@@ -299,6 +306,12 @@ tbody tr:hover {
     main {
         padding: 10px;
     }
+
+    iframe {
+        width: 100%;
+        height: 400px;
+        border: none;
+    }
 }
 
 @media screen and (min-width: 1201px) {
@@ -308,5 +321,11 @@ tbody tr:hover {
 
     main {
         padding: 10px;
+    }
+
+    iframe {
+        width: 100%;
+        height: 600px;
+        border: none;
     }
 }
